Fixed search icon & overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ top:0;
 .outer-search-box {
   border: 1px solid #ddd;
   border-radius: 20px;
-  width: 273px;
+  width: 240px;
   position: relative;
 }
 
@@ -71,7 +71,7 @@ top:0;
   border: none;
   height: 20px;
   position: relative;
-  left: 40px;
+  left: 20px;
 }
 
 .search:focus, .serach:active {
@@ -80,7 +80,7 @@ top:0;
 .search-box span {
   position: absolute;
   top: 4px;
-  left: 10px;
+  right: 10px;
   color: #ddd;
 }
 
@@ -99,6 +99,7 @@ top:0;
   border-radius: 50%;
   margin-right: 1em;
 }
+
 #unn{
   font-size: 1.5em;
   color: black; 
@@ -121,7 +122,6 @@ top:0;
 }
 
 .user-description {
-  max-width: 70%;
   font-size: 1.5em;
   color: #aaa;
   display: inline-block;
@@ -132,18 +132,22 @@ top:0;
   overflow: hidden;
 
 }
-td .user-description {
 
-  vertical-align: center;
-}
-h3 {
-  font-size: 1.3em;
+.thead{
+  font-size: 1em;
   font-weight: bold;
   font-family: 'Lato';
   display: inline-block;
   margin-bottom: .2em;
-  color: #3399ff; }
+  color: #3399ff; 
+  bottom: 0;
+  margin-top: 1em;
+}
 
+.content {
+  display: block;
+  float: left;
+}
 .time {
   color: #00cc00;
 }
